# Collie

./: LICENSE  README.md  download.sh  pyproject.toml  requirements.txt  setup.py
collie/: ccnews_extractor.py  constraint_renderer.py  constraints.py  english_extractor.py  extract_constraints.py  extractor_utils.py  gutenberg_extractor.py  models.py  wiki_extractor.py
collie/examples/: extract.py  para_constraints.py  passage_constraints.py  sent_constraints.py  sources.py  validate.py  word_constraints.py
data/: all_data.dill
docs/: constraint_spec.md  extraction.md
logs/: alpaca-7b-1trial-no4-prompt.json  gpt-3.5-turbo-multi-round-generation-1trial.json  gpt-4-multi-round-generation-1trial.json  pass_coherence_report.json  vicuna-7b-1trial-no1-prompt.json
scripts/: analysis.ipynb  run_api_models.py  run_gpu_models.py
tests/: test_constraints.py
