[build-system]
requires = ["setuptools >= 61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "collie"
version = "0.1.0"
description = 'Official Implementation of "COLLIE: Systematic Construction of Constrained Text Generation Tasks"'
readme = "README.md"
requires-python = ">= 3.7"
authors = [{ name = "Howard Chen", email = "howardchen@cs.princeton.edu" }]
license = { text = "MIT License" }
keywords = ["large language model", "llm", "constrained generation", "benchmark"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    'Intended Audience :: Science/Research',
    'Topic :: Scientific/Engineering :: Artificial Intelligence',
]
dynamic=["dependencies"]


[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.packages.find]
where = ["."]  # list of folders that contain the packages (["."] by default)

[project.urls]
Homepage = "https://github.com/princeton-nlp/Collie"
